--- a/examples/vm_snapshot_special_cleanup.yml
+++ b/examples/vm_snapshot_special_cleanup.yml
@@ -3,10 +3,10 @@
   hosts: localhost
   connection: local
   gather_facts: false
-  environment:
-    SC_HOST: "your_host"
-    SC_USERNAME: "your_username"
-    SC_PASSWORD: "your_password"
+  vars:
+    # This variable is used to filter and delete snapshots.
+    # All snapshots with 'use_label' will be DELETED.
+    use_label: 'TEST'
 
   tasks:
   # ------------------------------------------------------
@@ -18,26 +18,26 @@
       set_fact:
         filtered_snapshots: []
 
-    - name: Loop through snapshots and add snapshots with label 'TEST' and type 'USER' to filtered_snapshots
+    - name: Loop through snapshots and add snapshots with use_label and type 'USER' to filtered_snapshots
       set_fact:
         filtered_snapshots: "{{ filtered_snapshots + [ item ] }}"
-      when: "{{ item.label  == 'TEST' and item.type == 'USER' }}"
+      when: "{{ item.label  == use_label and item.type == 'USER' }}"
       loop: "{{ snapshot_results.records }}"
       no_log: true
 
-    - name: Show only snapshots with label "TEST" and type "USER"
+    - name: Show only snapshots with use_label and type "USER"
       ansible.builtin.debug:
         var: filtered_snapshots
 
     # We could reuse "filtered_snapshots" here instead of "snapshot_results" and avoid the "when" statement.
     # But leaving it as is for example purposes.
     # Since this is the only mandatory task of the playbook, can be copy-pasted and reused as standalone task.
-    - name: Loop through list of snapshots delete if label is 'TEST' and type is 'USER'
+    - name: Loop through list of snapshots delete if label is use_label and type is 'USER'
       scale_computing.hypercore.vm_snapshot:
         vm_name: "{{ item.vm.name }}"
-        label: "{{ item.label }}"
+        uuid: "{{ item.snapshot_uuid }}"
         state: absent
-      when: "{{ item.label  == 'TEST' and item.type == 'USER' }}"
+      when: "{{ item.label == use_label and item.type == 'USER' }}"
       loop: "{{ snapshot_results.records }}"
 
     - name: List all snapshots - second time
@@ -48,13 +48,13 @@
       set_fact:
         filtered_snapshots: []
 
-    - name: Loop through snapshots and add snapshots with label 'TEST' and type 'USER' to filtered_snapshots - second time
+    - name: Loop through snapshots and add snapshots with use_label and type 'USER' to filtered_snapshots - second time
       set_fact:
         filtered_snapshots: "{{ filtered_snapshots + [ item ] }}"
-      when: "{{ item.label  == 'TEST' and item.type == 'USER' }}"
+      when: "{{ item.label  == use_label and item.type == 'USER' }}"
       loop: "{{ snapshot_results.records }}"
       no_log: true
 
-    - name: Show only snapshots with label 'TEST' and type 'USER' - second time
+    - name: Show only snapshots with use_label and type 'USER' - second time
       ansible.builtin.debug:
         var: filtered_snapshots
