--- a/examples/vm_snapshot_special_cleanup.yml
+++ b/examples/vm_snapshot_special_cleanup.yml
@@ -21,7 +21,7 @@
     - name: Loop through snapshots and add snapshots with use_label and type 'USER' to filtered_snapshots
       set_fact:
         filtered_snapshots: "{{ filtered_snapshots + [ item ] }}"
-      when: "{{ item.label  == use_label and item.type == 'USER' }}"
+      when: item.label  == use_label and item.type == 'USER'
       loop: "{{ snapshot_results.records }}"
       no_log: true
 
@@ -37,7 +37,7 @@
         vm_name: "{{ item.vm.name }}"
         uuid: "{{ item.snapshot_uuid }}"
         state: absent
-      when: "{{ item.label == use_label and item.type == 'USER' }}"
+      when: item.label == use_label and item.type == 'USER'
       loop: "{{ snapshot_results.records }}"
 
     - name: List all snapshots - second time
@@ -51,7 +51,7 @@
     - name: Loop through snapshots and add snapshots with use_label and type 'USER' to filtered_snapshots - second time
       set_fact:
         filtered_snapshots: "{{ filtered_snapshots + [ item ] }}"
-      when: "{{ item.label  == use_label and item.type == 'USER' }}"
+      when: item.label  == use_label and item.type == 'USER'
       loop: "{{ snapshot_results.records }}"
       no_log: true
 
