--- a/tests/integration/targets/inventory/cleanup.yml
+++ b/tests/integration/targets/inventory/cleanup.yml
@@ -2,10 +2,6 @@
 - name: Cleanup test environment
   hosts: localhost
   gather_facts: False
-  environment:
-    SC_HOST: "{{ sc_host }}"
-    SC_USERNAME: "{{ sc_config[sc_host].sc_username }}"
-    SC_PASSWORD: "{{ sc_config[sc_host].sc_password }}"
 
   tasks:
     - name: List all VMs
@@ -26,7 +22,7 @@
       ansible.builtin.set_fact:
         vms_to_remove: "{{ vms_to_remove + [vm] }}"
 
-    - name: Show vms_to_remove
+    - name: Show VMs to remove
       loop: "{{ vms_to_remove }}"
       loop_control:
         loop_var: vm
