--- a/tests/integration/targets/inventory/prepare.yml
+++ b/tests/integration/targets/inventory/prepare.yml
@@ -3,10 +3,6 @@
 - name: Prepare test environment
   hosts: localhost
   gather_facts: False
-  environment:
-    SC_HOST: "{{ sc_host }}"
-    SC_USERNAME: "{{ sc_config[sc_host].sc_username }}"
-    SC_PASSWORD: "{{ sc_config[sc_host].sc_password }}"
 
   vars:
     vm_data_doms:
@@ -48,7 +44,7 @@
 
   tasks:
     # ===============================================================================
-    - name: Create VM {{ vm_data_dom.name }}
+    - name: Create VMs
       loop: "{{ vm_data_doms }}"
       loop_control:
         loop_var: vm_data_dom
