Trivial modification in changelog message
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/changelogs/fragments/hypercore_inventory_bugfix.yml
+++ b/changelogs/fragments/hypercore_inventory_bugfix.yml
@@ -1,3 +1,4 @@
 ---
 bugfixes:
-  - This fix now converts value read from SC_TIMEOUT to int, thus resolving inventory parse error when SC_TIMEOUT was defined. (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/231)
+  - Convert SC_TIMEOUT environ variable to float, thus resolving inventory parse error when SC_TIMEOUT was defined.
+    (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/231)
