--- a/tests/integration/targets/vm_snapshot/tasks/03_vm_snapshot_attach_disk.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/03_vm_snapshot_attach_disk.yml
@@ -6,17 +6,23 @@
 - name: Test vm_snapshot_attach_disk
 
   vars:
-    vm_1_snapshot_label_0: ana-snap
     vm_1_snapshot_label: snap-0
     vm_1: snapshot-test-vm-1
-    vm_2: snapshot-test-vm-3
+    vm_2_label: "-attach"
+    vm_2: "snapshot-test-vm-1{{ vm_2_label }}"
+
     slot_a: 42
     slot_b: 0
 
+    force_reboot: true  # allow forced vm shutdown
+
   block:
-    - include_tasks: helper_api_vm_snapshot_create.yml
+    - name: Create a stopped VM "{{ vm_2 }}"
+      include_tasks: helper_api_vm_snapshot_create.yml
       vars:
-        vms_number: "{{ test_vms_number }}"
+        vms_number: 1
+        label: "{{ vm_2_label }}"
+        vm_init_state: stop
 
     # --------------------------------------------------------
 
@@ -42,6 +48,7 @@
     # ++++++++++++ Test attach snapshot disk from one VM to another +++++++++++
     # --------- Test VIRTIO_DISK to VIRTIO_DISK ---------
 
+    # Test attach when vm_2 is stopped
     - name: >-
         Attach "snap-0" from VM "{{ vm_1 }}" to VM "{{ vm_2 }}" - as VIRTIO_DISK
       scale_computing.hypercore.vm_snapshot_attach_disk:
@@ -52,18 +59,29 @@
           "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
         source_disk_type: virtio_disk
         source_disk_slot: 1
+        force_reboot: "{{ force_reboot }}"
       register: result
     - ansible.builtin.debug:
         var: result
     - ansible.builtin.assert:
         that:
           - result is changed
+    - include_tasks: helper_check_vm_state.yml
+      vars:
+        vm_name: "{{ vm_2 }}"
+        expected_state: stopped
     - ansible.builtin.assert: &test-virtio
         that:
           - result.record.type == "virtio_disk"
           - result.record.disk_slot == slot_a
           - result.record.vm_uuid == vm_2_info.records[0].uuid
 
+    - name: Start VM "{{ vm_2 }}"
+      scale_computing.hypercore.vm_params:
+        vm_name: "{{ vm_2 }}"
+        power_state: start
+
+    # Test attach when vm_2 is running
     - name: >-
         IDEMPOTENCE - Attach "snap-0" from VM "{{ vm_1 }}"
         to VM "{{ vm_2 }}" - as VIRTIO_DISK
@@ -75,15 +93,23 @@
           "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
         source_disk_type: virtio_disk
         source_disk_slot: 1
+        force_reboot: "{{ force_reboot }}"
       register: result
     - ansible.builtin.debug:
         var: result
     - ansible.builtin.assert:
         that:
           - result is not changed
+    - include_tasks: helper_check_vm_state.yml
+      vars:
+        vm_name: "{{ vm_2 }}"
+        expected_state: started
     - ansible.builtin.assert: *test-virtio
 
-#    # --------- Test VIRTIO_DISK to SOME_OTHER_TYPE_OF_DISK ---------
+    # >>>>>>>>>>>>>>>>>>>>
+    # The rest of the tests are attaching on a running vm_2/vm_1
+    # >>>>>>>>>>>>>>>>>>>>
+    # --------- Test VIRTIO_DISK to SOME_OTHER_TYPE_OF_DISK ---------
     - name: >-
         Attach "snap-0" from VM "{{ vm_1 }}" to
         VM "{{ vm_2 }}" - as NOT VIRTIO_DISK
@@ -95,12 +121,17 @@
           "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
         source_disk_type: virtio_disk
         source_disk_slot: 1
+        force_reboot: "{{ force_reboot }}"
       register: result
     - ansible.builtin.debug:
         var: result
     - ansible.builtin.assert:
         that:
           - result is changed
+    - include_tasks: helper_check_vm_state.yml
+      vars:
+        vm_name: "{{ vm_2 }}"
+        expected_state: started
     - ansible.builtin.assert: &test-not-virtio
         that:
           - result.record.type == "ide_disk"
@@ -118,12 +149,17 @@
           "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
         source_disk_type: virtio_disk
         source_disk_slot: 1
+        force_reboot: "{{ force_reboot }}"
       register: result
     - ansible.builtin.debug:
         var: result
     - ansible.builtin.assert:
         that:
           - result is not changed
+    - include_tasks: helper_check_vm_state.yml
+      vars:
+        vm_name: "{{ vm_2 }}"
+        expected_state: started
     - ansible.builtin.assert: *test-not-virtio
 
     # ++++++++++++ Test attach snapshot disk from a VM to itself +++++++++++++
@@ -139,12 +175,17 @@
           "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
         source_disk_type: virtio_disk
         source_disk_slot: 1
+        force_reboot: "{{ force_reboot }}"
       register: result
     - ansible.builtin.debug:
         var: result
     - ansible.builtin.assert:
         that:
           - result is changed
+    - include_tasks: helper_check_vm_state.yml
+      vars:
+        vm_name: "{{ vm_1 }}"
+        expected_state: started
     - ansible.builtin.assert: &test-virtio-2
         that:
           - result.record.type == "virtio_disk"
@@ -162,10 +203,22 @@
           "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
         source_disk_type: virtio_disk
         source_disk_slot: 1
+        force_reboot: "{{ force_reboot }}"
       register: result
     - ansible.builtin.debug:
         var: result
+    - include_tasks: helper_check_vm_state.yml
+      vars:
+        vm_name: "{{ vm_1 }}"
+        expected_state: started
     - ansible.builtin.assert:
         that:
           - result is not changed
     - ansible.builtin.assert: *test-virtio-2
+
+# ---------- Cleanup ------------
+  always:
+    - name: Remove snapshot attach testing VM "{{ vm_2 }}"
+      scale_computing.hypercore.vm:
+        vm_name: "{{ vm_2 }}"
+        state: absent
