Document user is responsible to select next free slot on specific disk bus
Otherwise disk is attached, but VM is not bootable.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/vm_snapshot/tasks/03_vm_snapshot_attach_disk.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/03_vm_snapshot_attach_disk.yml
@@ -7,8 +7,9 @@
     vm_2_label: "-attach"
     vm_2: "snapshot-test-vm-1{{ vm_2_label }}"
 
-    slot_a: 42
-    slot_b: 0
+    # We must use next free slot on bus if we want VM to be bootable!
+    slot_a: 3  # virtio_disk
+    slot_b: 0  # ide_disk
 
     force_reboot: true  # allow forced vm shutdown
 
