--- a/tests/integration/targets/vm_snapshot/tasks/03_vm_snapshot_attach_disk.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/03_vm_snapshot_attach_disk.yml
@@ -8,8 +8,9 @@
     vm_2: "snapshot-test-vm-1{{ vm_2_label }}"
 
     # We must use next free slot on bus if we want VM to be bootable!
-    slot_a: 3  # virtio_disk
-    slot_b: 0  # ide_disk
+    slot_vm_1_virtio: 2
+    slot_a: 3  # vm_2, virtio_disk
+    slot_b: 0  # vm_2, ide_disk
 
     force_reboot: true  # allow forced vm shutdown
 
@@ -171,7 +172,7 @@
       scale_computing.hypercore.vm_snapshot_attach_disk:
         vm_name: "{{ vm_1 }}"
         vm_disk_type: virtio_disk
-        vm_disk_slot: "{{ slot_a }}"
+        vm_disk_slot: "{{ slot_vm_1_virtio }}"
         source_snapshot_uuid:
           "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
         source_disk_type: virtio_disk
@@ -190,7 +191,7 @@
     - ansible.builtin.assert: &test-virtio-2
         that:
           - result.record.type == "virtio_disk"
-          - result.record.disk_slot == slot_a
+          - result.record.disk_slot == slot_vm_1_virtio
           - result.record.vm_uuid == vm_1_info.records[0].uuid
 
     - name: >-
@@ -199,7 +200,7 @@
       scale_computing.hypercore.vm_snapshot_attach_disk:
         vm_name: "{{ vm_1 }}"
         vm_disk_type: virtio_disk
-        vm_disk_slot: "{{ slot_a }}"
+        vm_disk_slot: "{{ slot_vm_1_virtio }}"
         source_snapshot_uuid:
           "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
         source_disk_type: virtio_disk
