--- a/tests/integration/targets/vm_snapshot/tasks/03_vm_snapshot_attach_disk.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/03_vm_snapshot_attach_disk.yml
@@ -1,22 +1,45 @@
 ---
-# ==============================
-# The VM to which we are trying to attach the
-# snapshot disk to MUST NOT be running!
-# ==============================
 - name: Test vm_snapshot_attach_disk
 
   vars:
-    vm_1_snapshot_label_0: ana-snap
     vm_1_snapshot_label: snap-0
     vm_1: snapshot-test-vm-1
-    vm_2: snapshot-test-vm-3
-    slot_a: 42
-    slot_b: 43
+    vm_2_label: "-attach"
+    vm_2: "snapshot-test-vm-1{{ vm_2_label }}"
+
+    # We must use next free slot on bus if we want VM to be bootable!
+    slot_vm_1_virtio: 2
+    slot_a: 3  # vm_2, virtio_disk
+    slot_b: 0  # vm_2, ide_disk
+
+    force_reboot: true  # allow forced vm shutdown
 
   block:
-    - include_tasks: helper_api_vm_snapshot_create.yml
-      vars:
-        vms_number: "{{ test_vms_number }}"
+    - name: Create a stopped VM "{{ vm_2 }}"
+      scale_computing.hypercore.vm:
+        vm_name: "{{ vm_2 }}"
+        description: Snapshot testing
+        state: present
+        tags:
+          - Xlab_snapshot_testing
+        memory: "{{ '512 MB' | human_to_bytes }}"
+        vcpu: 2
+        attach_guest_tools_iso: false
+        power_state: stop
+        disks:
+          - type: virtio_disk
+            disk_slot: 0
+            size: "{{ '10.1 GB' | human_to_bytes }}"
+          - type: virtio_disk
+            disk_slot: 1
+            size: "{{ '10.2 GB' | human_to_bytes }}"
+        nics: []
+        boot_devices:
+          - type: virtio_disk
+            disk_slot: 0
+          - type: ide_cdrom
+            disk_slot: 0
+        machine_type: BIOS
 
     # --------------------------------------------------------
 
@@ -42,6 +65,7 @@
     # ++++++++++++ Test attach snapshot disk from one VM to another +++++++++++
     # --------- Test VIRTIO_DISK to VIRTIO_DISK ---------
 
+    # Test attach when vm_2 is stopped
     - name: >-
         Attach "snap-0" from VM "{{ vm_1 }}" to VM "{{ vm_2 }}" - as VIRTIO_DISK
       scale_computing.hypercore.vm_snapshot_attach_disk:
@@ -52,18 +76,29 @@
           "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
         source_disk_type: virtio_disk
         source_disk_slot: 1
+        force_reboot: "{{ force_reboot }}"
       register: result
     - ansible.builtin.debug:
         var: result
     - ansible.builtin.assert:
         that:
           - result is changed
+    - include_tasks: helper_check_vm_state.yml
+      vars:
+        vm_name: "{{ vm_2 }}"
+        expected_state: stopped
     - ansible.builtin.assert: &test-virtio
         that:
           - result.record.type == "virtio_disk"
           - result.record.disk_slot == slot_a
           - result.record.vm_uuid == vm_2_info.records[0].uuid
 
+    - name: Start VM "{{ vm_2 }}"
+      scale_computing.hypercore.vm_params:
+        vm_name: "{{ vm_2 }}"
+        power_state: start
+
+    # Test attach when vm_2 is running
     - name: >-
         IDEMPOTENCE - Attach "snap-0" from VM "{{ vm_1 }}"
         to VM "{{ vm_2 }}" - as VIRTIO_DISK
@@ -75,15 +110,23 @@
           "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
         source_disk_type: virtio_disk
         source_disk_slot: 1
+        force_reboot: "{{ force_reboot }}"
       register: result
     - ansible.builtin.debug:
         var: result
     - ansible.builtin.assert:
         that:
           - result is not changed
+    - include_tasks: helper_check_vm_state.yml
+      vars:
+        vm_name: "{{ vm_2 }}"
+        expected_state: started
     - ansible.builtin.assert: *test-virtio
 
-#    # --------- Test VIRTIO_DISK to SOME_OTHER_TYPE_OF_DISK ---------
+    # >>>>>>>>>>>>>>>>>>>>
+    # The rest of the tests are attaching on a running vm_2/vm_1
+    # >>>>>>>>>>>>>>>>>>>>
+    # --------- Test VIRTIO_DISK to SOME_OTHER_TYPE_OF_DISK ---------
     - name: >-
         Attach "snap-0" from VM "{{ vm_1 }}" to
         VM "{{ vm_2 }}" - as NOT VIRTIO_DISK
@@ -95,12 +138,18 @@
           "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
         source_disk_type: virtio_disk
         source_disk_slot: 1
+        force_reboot: "{{ force_reboot }}"
+        shutdown_timeout: 10  # For faster testing. VM has no OS, so it cannot react to ACPI shutdown.
       register: result
     - ansible.builtin.debug:
         var: result
     - ansible.builtin.assert:
         that:
           - result is changed
+    - include_tasks: helper_check_vm_state.yml
+      vars:
+        vm_name: "{{ vm_2 }}"
+        expected_state: started
     - ansible.builtin.assert: &test-not-virtio
         that:
           - result.record.type == "ide_disk"
@@ -118,15 +167,23 @@
           "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
         source_disk_type: virtio_disk
         source_disk_slot: 1
+        force_reboot: "{{ force_reboot }}"
       register: result
     - ansible.builtin.debug:
         var: result
     - ansible.builtin.assert:
         that:
           - result is not changed
+    - include_tasks: helper_check_vm_state.yml
+      vars:
+        vm_name: "{{ vm_2 }}"
+        expected_state: started
     - ansible.builtin.assert: *test-not-virtio
 
     # ++++++++++++ Test attach snapshot disk from a VM to itself +++++++++++++
+    # This does change vm_1 (snapshot-test-vm-1), because of this whole 03_vm_snapshot_attach_disk.yml
+    # requires snapshot-test-vm-1 to be deleted and recreated each time.
+    # Refactor test if you do not like this.
 
     - name: >-
         Attach "snap-0" from VM "{{ vm_1 }}"
@@ -134,21 +191,26 @@
       scale_computing.hypercore.vm_snapshot_attach_disk:
         vm_name: "{{ vm_1 }}"
         vm_disk_type: virtio_disk
-        vm_disk_slot: "{{ slot_a }}"
+        vm_disk_slot: "{{ slot_vm_1_virtio }}"
         source_snapshot_uuid:
           "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
         source_disk_type: virtio_disk
         source_disk_slot: 1
+        force_reboot: "{{ force_reboot }}"
       register: result
     - ansible.builtin.debug:
         var: result
     - ansible.builtin.assert:
         that:
           - result is changed
+    - include_tasks: helper_check_vm_state.yml
+      vars:
+        vm_name: "{{ vm_1 }}"
+        expected_state: started
     - ansible.builtin.assert: &test-virtio-2
         that:
           - result.record.type == "virtio_disk"
-          - result.record.disk_slot == slot_a
+          - result.record.disk_slot == slot_vm_1_virtio
           - result.record.vm_uuid == vm_1_info.records[0].uuid
 
     - name: >-
@@ -157,15 +219,27 @@
       scale_computing.hypercore.vm_snapshot_attach_disk:
         vm_name: "{{ vm_1 }}"
         vm_disk_type: virtio_disk
-        vm_disk_slot: "{{ slot_a }}"
+        vm_disk_slot: "{{ slot_vm_1_virtio }}"
         source_snapshot_uuid:
           "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
         source_disk_type: virtio_disk
         source_disk_slot: 1
+        force_reboot: "{{ force_reboot }}"
       register: result
     - ansible.builtin.debug:
         var: result
+    - include_tasks: helper_check_vm_state.yml
+      vars:
+        vm_name: "{{ vm_1 }}"
+        expected_state: started
     - ansible.builtin.assert:
         that:
           - result is not changed
     - ansible.builtin.assert: *test-virtio-2
+
+# ---------- Cleanup ------------
+  always:
+    - name: Remove snapshot attach testing VM "{{ vm_2 }}"
+      scale_computing.hypercore.vm:
+        vm_name: "{{ vm_2 }}"
+        state: absent
