--- a/examples/vm_os_upgrade/03_create_source_vm.yml
+++ b/examples/vm_os_upgrade/03_create_source_vm.yml
@@ -46,7 +46,7 @@
 
     - name: Confirm Ubuntu ISO image autoinstall
       ansible.builtin.pause:
-        prompt: "Please confirm Ubuntu ISO image autoinstall - answer 'yes' in VM console"
+        prompt: "Please confirm Ubuntu ISO image autoinstall - answer 'yes' in VM console. After press any key to continue"
 
     # poweroff in cloud-init is used to signal installation is done
     - name: Wait until VM finishes autoinstall
@@ -55,7 +55,7 @@
       register: source_vm_info
       until: source_vm_info.records.0.power_state == 'stopped'
       retries: 60
-      delay: 10
+      delay: 20
 
 - name: Power on the VM
   scale_computing.hypercore.vm_params:
@@ -68,7 +68,7 @@
   register: source_vm_info
   until: source_vm_info.records.0.nics.0.ipv4_addresses
   retries: 60
-  delay: 10
+  delay: 20
 
 - name: Refresh inventory
   ansible.builtin.meta: refresh_inventory
