Make VM VLAN configurable
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/examples/vm_os_upgrade/03_create_source_vm.yml
+++ b/examples/vm_os_upgrade/03_create_source_vm.yml
@@ -33,7 +33,7 @@
             iso_name: "{{ iso_filename }}"
         nics:
           - type: virtio
-            vlan: 0
+            vlan: "{{ source_vm_vlan }}"
         boot_devices:
           - type: virtio_disk
             disk_slot: 0
