--- a/examples/vm_os_upgrade/05_clone_from_source.yml
+++ b/examples/vm_os_upgrade/05_clone_from_source.yml
@@ -26,7 +26,7 @@
     vm_name: "{{ cloned_vm_name }}"
     items:
       - vlan: "{{ cloned_vm_info.records[0].nics[0].vlan }}"
-        vlan_new: 0
+        vlan_new: "{{ cloned_vm_vlan }}"
     state: set
 
 - name: Power on cloned VM
