Fix API module return list of key instead of list of dict.

--- a/tests/integration/targets/api/tasks/02_corner_cases.yml
+++ b/tests/integration/targets/api/tasks/02_corner_cases.yml
@@ -13,7 +13,7 @@
 - ansible.builtin.assert:
     that:
       - ping_result is not changed
-      - ping_result.record.0 == "status"
+      - ping_result.record.0.status is defined
 
 - name: Get HC3 Node
   scale_computing.hypercore.api:
