--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -346,7 +346,7 @@ jobs:
   replica_cleanup:
     needs:
       - integ
-      - integ-sequentially
+      - integ-sequetially
     runs-on: [self-hosted2]
     container: quay.io/justinc1_github/scale_ci_integ:3
     env:
@@ -375,7 +375,7 @@ jobs:
   smb_cleanup:
     needs:
       - integ
-      - integ-sequentially
+      - integ-sequetially
     runs-on: [self-hosted2]
     container: quay.io/justinc1_github/scale_ci_integ:3
     defaults:
