fix typo dns-config vs dns_config
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -291,7 +291,7 @@ jobs:
         # Some tests can be tested on VSNS - those are run on VSNS.
         # Some cannot, those are run on test cluster 10.5.11.50.
         test_name:
-          - dns-config
+          - dns_config
           # - cluster_shutdown
           # - version_update
           - oidc_config
